--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,8 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-h1,h2,h3,span{
-  color: #212121;
+html{
+  scroll-behavior: smooth;
+}
+
+h1,h2,h3{
+  @apply text-[#212121] dark:text-white
+}
+h1,h2,h3,h4,h5,h6{
+  @apply dark:text-white
+}
+p{
+  @apply text-stone-400 dark:text-stone-400
 }
 
 :root{
@@ -36,7 +46,7 @@ h1,h2,h3,span{
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
 
-    --border: 214.3 31.8% 91.4%;
+    --border: lightgray;
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
  
@@ -44,7 +54,7 @@ h1,h2,h3,span{
   }
  
   .dark {
-    --background: 222.2 84% 4.9%;
+    --background: #121212;
     --foreground: 210 40% 98%;
  
     --card: 222.2 84% 4.9%;
@@ -68,7 +78,7 @@ h1,h2,h3,span{
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
  
-    --border: 217.2 32.6% 17.5%;
+    --border: #262626;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
   }
@@ -104,11 +114,11 @@ h1,h2,h3,span{
 
 /* buttons */
 .outline-btn{
-  @apply bg-transparent text-black border-2 border-black w-max p-2 px-5 rounded-md text-sm font-bold
+  @apply bg-transparent dark:text-white dark:border-white text-black border-2 border-black w-max p-2 px-5 rounded-md text-sm dark:font-medium font-bold
 }
 
 .fill-btn{
- @apply bg-black text-white w-full lg:w-max border-none p-2 px-5 rounded-md text-sm
+ @apply bg-black dark:text-black dark:bg-white font-light text-white w-full lg:w-max border-none p-2 px-5 rounded-md text-sm dark:font-bold
 }
 
 .animation{
@@ -120,14 +130,17 @@ h1,h2,h3,span{
   @apply text-3xl lg:text-7xl
 }
 
+.login-input{
+  @apply bg-transparent dark:placeholder:text-stone-400 dark:border-[#262626] dark:text-stone-400
+}
 
+/* special effetctts */
 .gradient-line{
   width: 100%;
   height: 1px;
   background: rgb(255,255,255);
   background: radial-gradient(circle, rgba(255,255,255,1) 21%, rgba(254,254,255,0) 81%);
 }
-
 .underlineText::after{
   content: '';
   width: 100%;
@@ -136,11 +149,42 @@ h1,h2,h3,span{
   display: block;
   margin: auto;
 }
+/* special effetctts */
+
+
+
+
+/* navbar */
+.mobile_navbar{
+  position: fixed;
+  left: -80%;
+  width: 80%;
+  background-color: white;
+  height: 100vh;
+  z-index: 999999999;
+  border-right: 1px solid #262626;
+  transition: .4s;
+}
+.mobile_navbar.active{
+  left: 0;
+}
+
+.navbar{
+  border-color: #E5E7EB; 
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms; 
+  width: 100%;
+}
+
 
 .navbar-links {
   color: white;
   transition: 0.4s;
   position: relative;
+}
+#line{
+  display: flex;
 }
 
 .navbar-links li::after {
@@ -149,7 +193,7 @@ h1,h2,h3,span{
   background: var(--primaryColor);
   height: 2px;
   width: 0%;
-  margin-top: 30px;
+  margin-top: 25px;
   display: block;
   transition: .4s;
 }
@@ -171,18 +215,5 @@ h1,h2,h3,span{
   color: white;
   transition: 0.4s;
 }
+/* navbar */
 
-
-::-webkit-scrollbar{
-width: 3px;
-background-color: #dbdbdb;
-color: blue;
-}
-::-webkit-scrollbar-thumb{
-  color: gray;
-  width: 2px;
-}
-
-::-webkit-scrollbar-track{
-  width: 2px;
-}
