--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;600&family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
 html{
   scroll-behavior: smooth;
+  font-family: 'Inter', sans-serif;
 }
 
 h1,h2,h3{
