--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;600&family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap');
+@import './style.css';
 
 @tailwind base;
 @tailwind components;
@@ -7,87 +7,76 @@
 
 html{
   scroll-behavior: smooth;
-  font-family: 'Inter', sans-serif;
-}
-
-h1,h2,h3{
-  @apply text-[#212121] dark:text-white
-}
-h1,h2,h3,h4,h5,h6{
-  @apply dark:text-white
-}
-p{
-  @apply text-stone-400 dark:text-stone-400
 }
 
 :root{
-  --primaryColor: #F6C42E;
+  --mainColor: #e6b400;
 }
- 
+
 @layer base {
   :root {
     --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
+    --foreground: 240 10% 3.9%;
 
     --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
- 
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
- 
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
- 
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
- 
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
- 
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
- 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
+    --card-foreground: 240 10% 3.9%;
 
-    --border: lightgray;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
- 
+    --popover: 0 0% 100%;
+    --popover-foreground: 240 10% 3.9%;
+
+    --primary: 240 5.9% 10%;
+    --primary-foreground: 0 0% 98%;
+
+    --secondary: 240 4.8% 95.9%;
+    --secondary-foreground: 240 5.9% 10%;
+
+    --muted: 240 4.8% 95.9%;
+    --muted-foreground: 240 3.8% 46.1%;
+
+    --accent: 240 4.8% 95.9%;
+    --accent-foreground: 240 5.9% 10%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+
+    --border: 240 5.9% 90%;
+    --input: 240 5.9% 90%;
+    --ring: 240 10% 3.9%;
+
     --radius: 0.5rem;
   }
- 
+
   .dark {
-    --background: #121212;
-    --foreground: 210 40% 98%;
- 
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
- 
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
- 
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
- 
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
- 
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
- 
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
- 
+    --background: 240 10% 3.9%;
+    --foreground: 0 0% 98%;
+
+    --card: 240 10% 3.9%;
+    --card-foreground: 0 0% 98%;
+
+    --popover: 240 10% 3.9%;
+    --popover-foreground: 0 0% 98%;
+
+    --primary: 0 0% 98%;
+    --primary-foreground: 240 5.9% 10%;
+
+    --secondary: 240 3.7% 15.9%;
+    --secondary-foreground: 0 0% 98%;
+
+    --muted: 240 3.7% 15.9%;
+    --muted-foreground: 240 5% 64.9%;
+
+    --accent: 240 3.7% 15.9%;
+    --accent-foreground: 0 0% 98%;
+
     --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
- 
-    --border: #262626;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
+    --destructive-foreground: 0 0% 98%;
+
+    --border: 240 3.7% 15.9%;
+    --input: 240 3.7% 15.9%;
+    --ring: 240 4.9% 83.9%;
   }
 }
- 
+
 @layer base {
   * {
     @apply border-border;
@@ -97,188 +86,6 @@ p{
   }
 }
 
-.flex-center{
-  @apply flex items-center justify-center
-}
-.flex-between{
-  @apply flex items-center justify-between
-}
-
-.flex-start{
-  @apply flex items-center justify-start
-}
-
-.column{
-  @apply flex flex-col
-}
-
-.max-width-wrapper{
-  @apply max-w-7xl mx-auto p-5
-}
-
-/* buttons */
-.outline-btn{
-  @apply bg-transparent dark:text-white dark:border-white text-black border-2 border-black w-max p-2 px-5 rounded-md text-sm dark:font-medium font-bold
-}
-.outline-btn-full{
-  @apply bg-transparent dark:text-white dark:border-white text-black border-2 border-black w-full p-2 px-5 rounded-md text-sm dark:font-medium font-bold
-}
-
-.fill-btn{
- @apply bg-black dark:text-black dark:bg-white font-light text-white w-full lg:w-max border-none p-2 px-5 rounded-md text-sm dark:font-bold
-}
-.fill-btn-max-width{
-  @apply bg-black dark:text-black dark:bg-white font-light text-white w-max border-none p-2 px-5 rounded-md text-sm dark:font-bold
- }
-
-.animation{
-  @apply transition ease-in-out duration-500
-}
-/* texts */
-
-.big-heading{
-  @apply text-3xl lg:text-7xl
-}
-
-.login-input{
-  @apply bg-transparent dark:placeholder:text-stone-400 dark:border-[#262626] dark:text-stone-400
-}
-
-.skeleton-style{
-  @apply bg-stone-300 dark:bg-[#191919] h-20 w-56
-}
-
-/* special effetctts */
-.gradient-line{
-  width: 100%;
-  height: 1px;
-  background: rgb(255,255,255);
-  background: radial-gradient(circle, rgba(255,255,255,1) 21%, rgba(254,254,255,0) 81%);
-}
-.underlineText::after{
-  content: '';
-  width: 100%;
-  height: 2px;
-  background: var(--primaryColor);
-  display: block;
-  margin: auto;
-}
-.underlineText::after{
-  content: '';
-  width: 15%;
-  height: 2px;
-  background: var(--primaryColor);
-  display: block;
-  margin-left:0 ;
-}
-/* special effetctts */
-
-
-
-
-/* navbar */
-.mobile_navbar{
-  position: fixed;
-  left: -80%;
-  width: 80%;
-  height: 100vh;
-  z-index: 999999999999;
-  transition: .4s;
-}
-.mobile_navbar.active{
-  left: 0;
-}
-
-.navbar{
-  background-color: transparent;
-  border-color: #E5E7EB; 
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 300ms; 
-  width: 100%;
-  backdrop-filter: blur(0);
-}
-
-
-.navbar-links {
-  color: white;
-  transition: 0.4s;
-  position: relative;
-}
-#line{
-  display: flex;
-}
-
-.navbar-links li::after {
-  content: '';
-  position: absolute;
-  background: var(--primaryColor);
-  height: 2px;
-  width: 0%;
-  margin-top: 25px;
-  display: block;
-  transition: .4s;
-}
-
-.navbar-links li.actives::after {
-  content: '';
-  position: absolute;
-  background: var(--primaryColor);
-  height: 2px;
-  width: 10%;
-  margin-top: 30px;
-  display: block;
-  transition: .4s;
-}
-.navbar-links li:hover::after{
-  width: 10%;
-}
-.navbar-logo{
-  color: white;
-  transition: 0.4s;
-}
-/* navbar */
-
-.hide-bg{
-  mix-blend-mode: multiply;
-  filter: contrast(1);
-}
-
-
-/* width */
-::-webkit-scrollbar {
-  width: 2px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: transparent;
-  color-scheme: dark;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background:#1a1a1a;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #1a1a1a;
-}
-
-
-/* animations */
-@keyframes bounce-right {
-  0%, 100% {
-      transform: translateX(-25%);
-      animation-timing-function: cubic-bezier(0.8,0,1,1);
-  }
-  50% {
-      transform: none;
-      animation-timing-function: cubic-bezier(0,0,0.2,1);
-  }
-}
-
-.group:hover .group-hover\:animate-bounce-right {
-  animation: bounce-right 1s infinite;
+p{
+  @apply text-stone-400
 }
